src/test/testFiles/invalid/semanticErrors/arraysListMethod.val
let x = Array<number>(3);
x.append(1);